2005-07-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* mod_mono.conf.in: use <IfModule>

2005-06-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/Makefile.am: no need to set PREFIX for apxs.

2005-05-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.[ch]: support for IS_CONNECTED and increased version
	number.

2005-05-03  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: 1.0.9

2005-04-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: when checking for http_protocol.h, include httpd.h too.
	Patch from Bill Middleton.

2005-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: added control panel from Joshua Tauberer.
	* src/mod_mono.h: uri_component 1.3 -> apr_uri_t in 2.0

2005-04-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.h: forgot to add a define for apache 1.3 with the
	equivalent apr_table_addn.

2005-04-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: don't overwrite headers already set. Fixes bug #74507.

2005-04-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: add CGI and other variables to the request.

2005-03-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL:
	* man/mod_mono.8.in: documented MonoSetEnv.

2005-03-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: added MonoSetEnv directive. From a patch by Joel
	Reed to 1.0.6.

2005-03-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: try to connect to mod-mono-server before forking.
	Patch by Rob Lyon.

2005-03-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: 1.0.6.99.
	* src/mod_mono.c: patch from Rob Lyon that fixes unix socket deletion
	when the default name is used.

2005-02-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: some small changes that make this work on amd64.
	Thanks to Mike Morano.

2005-02-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>
