@@ -1,4 +1,4 @@
-Last updated: Jan 9, 2005
+Last updated: Jul 25, 2005
 
 Index
 -------
@@ -71,23 +71,23 @@ Installing mod_mono
     2. Configure apache.
 
        We're going to configure apache so that we can browse the samples
-       installed by XSP under /usr/share/doc/xsp/test.
+       installed by XSP under /usr/lib/xsp/test.
 
        Edit your httpd.conf file, which should be in /etc/httpd,
        /etc/apache, /etc/apache2...
 
        Add the following lines:
 
-            Alias /demo "/usr/share/doc/xsp/test"
-	    MonoApplications "/demo:/usr/share/doc/xsp/test"
+            Alias /demo "/usr/lib/xsp/test"
+	    MonoApplications "/demo:/usr/lib/xsp/test"
 
        so that apache redirects requests from /demo to /demo/ and looks
        for everything requested as /demo/xxx under
-       /usr/share/doc/xsp/test/xxx.Don't forget the quotes.
+       /usr/lib/xsp/test/xxx.Don't forget the quotes.
 
        For Apache 1.3 and, optionally, for Apache 2.0, add these lines:
 
-            <Directory /usr/share/doc/xsp/test>
+            <Directory /usr/lib/xsp/test>
 	           SetHandler mono
                    <IfModule mod_dir.c>
                          DirectoryIndex index.aspx
@@ -132,9 +132,9 @@ APPENDIX A: Typical configuration without virtual hosts
 
       LoadModule mono_module /usr/lib/apache/1.3/mod_mono.so
       AddModule mod_mono.c
-      Alias /demo "/usr/share/doc/xsp/test"
-      AddMonoApplications default "/demo:/usr/share/doc/xsp/test"
-      <Directory /usr/share/doc/xsp/test>
+      Alias /demo "/usr/lib/xsp/test"
+      AddMonoApplications default "/demo:/usr/lib/xsp/test"
+      <Directory /usr/lib/xsp/test>
               SetHandler mono
       # The following lines required for apache 1.3
               <IfModule mod_dir.c>
@@ -145,8 +145,8 @@ APPENDIX A: Typical configuration without virtual hosts
   or like this:
 
       LoadModule mono_module modules/mod_mono.so
-      Alias /demo "/usr/share/doc/xsp/test"
-      AddMonoApplications default "/demo:/usr/share/doc/xsp/test"
+      Alias /demo "/usr/lib/xsp/test"
+      AddMonoApplications default "/demo:/usr/lib/xsp/test"
       <Location /demo>
               SetHandler mono
       </Location>
