@@ -1,3 +1,8 @@
+2005-07-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* INSTALL:
+	* man/mod_mono.8.in: the path for the xsp tests has changed.
+
 2005-07-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* mod_mono.conf.in: use <IfModule>
